--- a/flask_server/requirements.txt
+++ b/flask_server/requirements.txt
@@ -1,12 +1,15 @@
-# create virtual environment
-# open environment
-# go to dlib-19.24 and enter: python setup.py install
-# pip install -r requirements.txt
+#1. create virtual environment
+#2. open environment
+#3.go to dlib folder. run: "'pip install dlib-19.22.1-cp39-cp39-win_amd64.whl" 
+#3.5 use link for errors: https://github.com/aliasad20/dlib-19.22.1_whl
+#4. pip install -r requirements.txt
+#4.5  use following link for errors: https://medium.com/analytics-vidhya/how-to-install-dlib-library-for-python-in-windows-10-57348ba1117f
 
 flask
+flask_login #?
 cmake
-dylib==19.22 
 opencv-python
 face_recognition
+sqlalchemy #?
 
-# gotta try other one once more 
+
